# snakes-cafe

./: pyproject.toml
snakes_cafe/: menu_info.py  snakes_cafe.py
snakes_cafe.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_snakes_cafe.py
