[tool.poetry]
name = "snakes-cafe"
version = "0.1.0"
description = ""
authors = ["Mayank Bhola <maybhola@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
